<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#050505"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="167dp"
        android:layout_height="47dp"
        android:layout_marginStart="100dp"
        android:text="@string/convertir"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.517" />

    <ImageView
        android:id="@+id/iconUnidad"
        android:layout_width="90dp"
        android:layout_height="85dp"
        android:layout_marginStart="160dp"
        android:contentDescription="@string/imageDesc"
        app:layout_constraintBottom_toTopOf="@+id/viewInfoUnidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/capacidadhdd" />

    <Spinner
        android:id="@+id/spUnidad1"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:background="@color/purple_500"
        android:entries="@array/unidadCapacidad"
        android:padding="20dp"
        android:scrollbarStyle="outsideOverlay"
        android:spinnerMode="dropdown"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewUnidad1" />

    <Spinner
        android:id="@+id/spUnidad2"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:background="@color/purple_500"
        android:entries="@array/unidadCapacidad"
        android:padding="20dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewUnidad2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/viewInfoUnidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/selccionarConversion"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:id="@+id/viewUnidad1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="212dp"
        android:text="@string/seleccionarUnidad"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewInfoUnidad"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/viewUnidad2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/transformarA"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewInfoUnidad"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/viewResultado"
        android:layout_width="160dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spUnidad2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/viewError"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.618" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutCantidad"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="160dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:hint="@string/cantidad"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:counterTextColor="@color/white"
        app:hintTextColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spUnidad1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputCantidad"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:background="@color/purple_500"
            android:inputType="numberDecimal|numberSigned"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>